added gitignore and new spl

--- a/HadoopConnect/default/app.conf
+++ b/HadoopConnect/default/app.conf
@@ -1,14 +1,18 @@
 [default]
 
+[install]
+build = 278448
+install_source_checksum = 89d4526f684e82beb6769845d647762783230c57
+
 [launcher]
-description = Provides reliable raw event export from Splunk to HDFS, exploration of HDFS, reading of data from HDFS into Splunk at search time. In Splunk 5.x indexing of data from HDFS into Splunk is also supported.
 author = FDSE@Splunk
-version = 1.2.6
+version = 1.2.7
+description = Provides reliable raw event export from Splunk to HDFS, exploration of HDFS, reading of data from HDFS into Splunk at search time. In Splunk 5.x indexing of data from HDFS into Splunk is also supported.
 
 [package]
 id = HadoopConnect
 
 [ui]
-is_visible = 1
 label = Hadoop Connect
+is_visible = 0
 
