--- a/HadoopConnect/default/commands.conf
+++ b/HadoopConnect/default/commands.conf
@@ -12,6 +12,7 @@ outputheader     = true
 enableheader     = true
 passauth         = true
 requires_srinfo  = true
+chunked = true
 
 [exporthdfs]
 filename         = export_hdfs.py
@@ -27,6 +28,7 @@ outputheader     = true
 enableheader     = true
 passauth         = true
 requires_srinfo  = true
+chunked = true
 
 [runexport]
 filename         = run_export.py
@@ -39,6 +41,7 @@ outputheader     = true
 enableheader     = true
 passauth         = true
 requires_srinfo  = true
+chunked = true
 
 # [hdfs]
 # filename         = hdfs_search_command.py
@@ -74,5 +77,4 @@ passauth         = true
 enableheader     = true
 outputheader     = true
 requires_srinfo  = true
-
-
+chunked = true
