--- a/HadoopConnect/default/logging.conf
+++ b/HadoopConnect/default/logging.conf
@@ -7,20 +7,20 @@
 keys = root, splunklib, HDFSSearchCommand
 
 [logger_root]
-level = WARNING   ; Default: WARNING
-handlers = stderr ; Default: stderr
+level = WARNING
+handlers = stderr
 
 [logger_splunklib]
 qualname = splunklib
-level = NOTSET        ; Default: WARNING
-handlers = splunklib  ; Default: stderr
-propagate = 0         ; Default: 1
+level = NOTSET
+handlers = splunklib
+propagate = 0
 
 [logger_HDFSSearchCommand]
 qualname = HDFSSearchCommand
-level = WARNING    ; Default: WARNING
-handlers = app    ; Default: stderr
-propagate = 0     ; Default: 1
+level = WARNING 
+handlers = app
+propagate = 0
 
 [handlers]
 keys = app, splunklib, stderr
